--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/mthintoncoding/Blog_API#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "morgan": "^1.8.1",
     "uuid": "^3.0.1"
   }
 }
